--- a/.github/workflows/deploynuget.yml
+++ b/.github/workflows/deploynuget.yml
@@ -24,19 +24,13 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
-      
-    - name: Restore Project Dependencies
-      run: dotnet restore ${{ env.PROJECT_PATH }}
     
     - name: Get Version
       id: project_version
       uses: battila7/get-version-action@v2
       
-    - name: Build Project
-      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration ${{ env.CONFIGURATION }} -p:PackageVersion=${{ steps.project_version.outputs.version-without-v }} --output ${{ env.OUTPUT_PATH }}
-      
     - name: Pack Project
-      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration ${{ env.CONFIGURATION }} --include-symbols -p:PackageVersion=${{ steps.project_version.outputs.version-without-v }} --output ${{ env.OUTPUT_PATH }}
+      run: dotnet pack ${{ env.PROJECT_PATH }} --configuration ${{ env.CONFIGURATION }} --include-symbols -p:PackageVersion=${{ steps.project_version.outputs.version-without-v }} --output ${{ env.OUTPUT_PATH }}
       
     - name: Deploy Package
       run: dotnet nuget push ${{ env.OUTPUT_PATH }}/*.nupkg --api-key ${{ secret.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
