--- a/src/Azox.Core/Azox.Core.csproj
+++ b/src/Azox.Core/Azox.Core.csproj
@@ -14,4 +14,9 @@
     <GetPackOutputItemsTask>true</GetPackOutputItemsTask>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
