bug fix deploynuget.yml

--- a/.github/workflows/deploynuget.yml
+++ b/.github/workflows/deploynuget.yml
@@ -6,9 +6,8 @@ on:
     - 'v*'
 
 env:
-  CONFIGURATION: 'Release'
   PROJECT_PATH: 'src/Azox.Core/Azox.Core.csproj'
-  OUTPUT_PATH: ${{ github.workspace }}/dist/${{ env.CONFIGURATION }}
+  OUTPUT_PATH: ${{ github.workspace }}/dist
   
 
 jobs:
@@ -30,7 +29,7 @@ jobs:
       uses: battila7/get-version-action@v2
       
     - name: Pack Project
-      run: dotnet pack ${{ env.PROJECT_PATH }} --configuration ${{ env.CONFIGURATION }} --include-symbols -p:PackageVersion=${{ steps.project_version.outputs.version-without-v }} --output ${{ env.OUTPUT_PATH }}
+      run: dotnet pack ${{ env.PROJECT_PATH }} --configuration Release --include-symbols -p:PackageVersion=${{ steps.project_version.outputs.version-without-v }} --output ${{ env.OUTPUT_PATH }}
       
     - name: Deploy Package
       run: dotnet nuget push ${{ env.OUTPUT_PATH }}/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
