--- a/.github/workflows/deploynuget.yml
+++ b/.github/workflows/deploynuget.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   deploy:
     name: Deploy To Nuget
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout
